Added documentation files for each package and updated to the new naming conventions

--- a/src/spacesettlers/configs/package.html
+++ b/src/spacesettlers/configs/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.configs</title>
 </head>
 
 <body>
-<p>Parses the configuration (XML) files.</p>
+<p>Objects to hold and parse the configuration files, which are all in XML.  We use the xstream package (provided in the lib directory).</p>
 <p>&nbsp;</p>
 </body>
 </html>
