--- a/src/spacesettlers/graphics/package.html
+++ b/src/spacesettlers/graphics/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.graphics</title>
 </head>
 
 <body>
-<p>Handles the java level graphics (used to be called Shadows in the previous version of spacewar).</p>
+<p>Handles the java level graphics.</p>
 <p>&nbsp;</p>
 </body>
 </html>
