--- a/src/spacesettlers/gui/package.html
+++ b/src/spacesettlers/gui/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.gui</title>
 </head>
 
 <body>
-<p>The GUI.</p>
+<p>The main GUI code.</p>
 <p>&nbsp;</p>
 </body>
 </html>
