--- a/src/spacesettlers/objects/package.html
+++ b/src/spacesettlers/objects/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.objects</title>
 </head>
 
 <body>
-<p>Basic objects used int he game (asteroids, bases, beacons, etc).</p>
+<p>Basic objects used in the Space Settlers game (asteroids, bases, beacons, etc).</p>
 <p>&nbsp;</p>
 </body>
 </html>
