--- a/src/spacesettlers/objects/resources/package.html
+++ b/src/spacesettlers/objects/resources/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>spacesettlers.util</title>
+<title>spacesettlers.objects.resources</title>
 </head>
 
 <body>
-<p>Common utilities classes.</p>
+<p>Handles the different types of resources that ships and teams can collect and holds collections of them (in a Pile).</p>
 <p>&nbsp;</p>
 </body>
 </html>
