--- a/src/spacesettlers/objects/weapons/package.html
+++ b/src/spacesettlers/objects/weapons/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>spacesettlers.util</title>
+<title>spacesettlers.objects.weapons</title>
 </head>
 
 <body>
-<p>Common utilities classes.</p>
+<p>Weapons for space settlers all live here</p>
 <p>&nbsp;</p>
 </body>
 </html>
