--- a/src/spacesettlers/clients/package.html
+++ b/src/spacesettlers/clients/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.clients</title>
 </head>
 
 <body>
-<p>Pre-provided spacewar clients (aggressive, pacifist, Do nothing, etc).</p>
+<p>Pre-provided spacesettlers clients (aggressive, pacifist, Do nothing, etc).</p>
 <p>&nbsp;</p>
 </body>
 </html>
