--- a/src/spacesettlers/ladder/package.html
+++ b/src/spacesettlers/ladder/package.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>spacesettlers.ladder</title>
 </head>
 
 <body>
-<p>Competition ladder</p>
+<p>Ladders for competition (can be ranked competitively or objectively, as specified in the configuration files).  This code manages the ladder and the round robin touraments.</p>
 <p>&nbsp;</p>
 </body>
 </html>
