--- a/src/spacesettlers/overview.html
+++ b/src/spacesettlers/overview.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>Space Settlers</title>
 </head>
 
 <body>
-<p>This is spacewar version 2.  This code has been fully rewritten from the previous versions of spacewar.  You are welcome to use the code and please cite the following paper if you publish anything based on the code.</p>
+<p>This is space settlers, version 1.  It is built on the same ideas as spacewar version 2.  This code has been fully rewritten from the previous versions of spacewar.  You are welcome to use the code and please cite the following paper if you publish anything based on the code.</p>
 
 <p>McGovern, Amy and Trytten, Deborah. (2013). Making In-Class Competitions Desirable For Marginalized Groups. Proceedings of the 2013 Frontiers in Education Conference, pages 704-706.</p>
 <p>&nbsp;</p>
