--- a/config/ladder/self-ladder.html
+++ b/config/ladder/self-ladder.html
@@ -6,45 +6,45 @@
 <th>Place</th><th>Team</th><th>Average Score</th><th>Average Beacons</th><th>Average Resources</th></tr><tr>
 <td>1</td>
 <td>Aggressive Heuristic Asteroid Collector</td>
-<td>1842.0</td>
+<td>1782.6666666666667</td>
 <td>3.0</td>
-<td>1842.0</td>
+<td>1782.0</td>
 </tr><tr>
 <td>2</td>
-<td>Do Nothing Client</td>
-<td>109.33333333333333</td>
-<td>0.0</td>
-<td>109.0</td>
-</tr><tr>
-<td>3</td>
 <td>Random Client</td>
 <td>0.0</td>
-<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr><tr>
+<td>3</td>
+<td>Beacon Collector Team</td>
+<td>0.0</td>
+<td>21.0</td>
 <td>0.0</td>
 </tr><tr>
 <td>4</td>
-<td>Beacon Collector Team</td>
+<td>Do Nothing Client</td>
 <td>0.0</td>
-<td>26.0</td>
+<td>0.0</td>
 <td>0.0</td>
 </tr></table><ul><li>***Game 1 / 3 with teams DoNothingTeam RandomTeam BeaconCollectorTeam HeuristicMinerTeam ***
 <li>***Game 1 / 3 with teams HeuristicMinerTeam = Aggressive Heuristic Asteroid Collector DoNothingTeam = Do Nothing Client RandomTeam = Random Client BeaconCollectorTeam = Beacon Collector Team ***
-<li>Team: Aggressive Heuristic Asteroid Collector scored 645.0
-<li>Team: Do Nothing Client scored 328.0
+<li>Team: Aggressive Heuristic Asteroid Collector scored 1407.0
+<li>Team: Do Nothing Client scored 0.0
 <li>Team: Random Client scored 0.0
 <li>Team: Beacon Collector Team scored 0.0
 <li>***Game 2 / 3 with teams DoNothingTeam RandomTeam BeaconCollectorTeam HeuristicMinerTeam ***
-<li>***Game 2 / 3 with teams RandomTeam = Random Client BeaconCollectorTeam = Beacon Collector Team HeuristicMinerTeam = Aggressive Heuristic Asteroid Collector DoNothingTeam = Do Nothing Client ***
-<li>Team: Random Client scored 0.0
+<li>***Game 2 / 3 with teams BeaconCollectorTeam = Beacon Collector Team HeuristicMinerTeam = Aggressive Heuristic Asteroid Collector DoNothingTeam = Do Nothing Client RandomTeam = Random Client ***
 <li>Team: Beacon Collector Team scored 0.0
-<li>Team: Aggressive Heuristic Asteroid Collector scored 555.0
+<li>Team: Aggressive Heuristic Asteroid Collector scored 1549.0
 <li>Team: Do Nothing Client scored 0.0
+<li>Team: Random Client scored 0.0
 <li>***Game 3 / 3 with teams DoNothingTeam RandomTeam BeaconCollectorTeam HeuristicMinerTeam ***
-<li>***Game 3 / 3 with teams HeuristicMinerTeam = Aggressive Heuristic Asteroid Collector BeaconCollectorTeam = Beacon Collector Team RandomTeam = Random Client DoNothingTeam = Do Nothing Client ***
-<li>Team: Aggressive Heuristic Asteroid Collector scored 4326.0
-<li>Team: Beacon Collector Team scored 0.0
-<li>Team: Random Client scored 0.0
+<li>***Game 3 / 3 with teams DoNothingTeam = Do Nothing Client HeuristicMinerTeam = Aggressive Heuristic Asteroid Collector RandomTeam = Random Client BeaconCollectorTeam = Beacon Collector Team ***
 <li>Team: Do Nothing Client scored 0.0
+<li>Team: Aggressive Heuristic Asteroid Collector scored 2392.0
+<li>Team: Random Client scored 0.0
+<li>Team: Beacon Collector Team scored 0.0
 </ul><hr>
-Last updated: Thu, 28 Jan 2016 19:00:26 -0600
+Last updated: Wed, 3 Feb 2016 15:42:25 -0600
 </body></html>
